<resources>
    <string name="app_name">WPS Ui</string>

    <string name="available">Available</string>
    <string name="history">History</string>

    <string name="no_payroll">You don\'t have any Payrolls yet</string>
    <string name="auth_payroll">Start now by authorizing your payrolls to get the\nmost of lla\'s features!</string>


    <string name="review_payment">Review Payment</string>
    <string name="amount">Amount</string>
    <string name="payment_date">Payment Date</string>
    <string name="creation_date">Creation Date</string>
    <string name="no_of_salaries">No. of Salaries</string>
    <string name="status">Status</string>


    <string name="amount_payroll">Amount Payroll</string>
    <string name="bhd">BHD</string>


    <string name="salaries">Salaries</string>
    <string name="review">Review All</string>
    <string name="payment_detail">Payment Details</string>
    <string name="debit_account">Debit Account</string>
    <string name="employer">Employer</string>
    <string name="description">Description</string>
    <string name="optional">(Optional)</string>

    <string name="authorize_payment">Authorize Payment</string>
    <string name="reject">Reject</string>
    <string name="cancel_payment">Cancel Payment</string>



    <string name="authorization_rejection">Please specify the reason for the authorization rejection</string>
    <string name="continuee">Continue</string>

<!--    <string name="salaries">Salaries</string>-->

    <string name="sort">Sort</string>
    <string name="search">Search</string>

    <string name="filter">Filter</string>
    <string name="name">Name</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
<!--    <string name="amount">Amount</string>-->
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="start_date">Start Date</string>
    <string name="finish_date">Finish Date</string>
    <string name="amount_range">Amount Range</string>
<!--    <string name="bhd">BHD</string>-->
    <string name="amount_hint">0.00</string>
    <string name="apply_filter">Apply Filtering</string>
    <string name="cancel">Cancel</string>


</resources>