<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="@dimen/dimen_16dp"
    tools:context=".filter.FilterActivity">


    <TextView
        android:id="@+id/tvFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="@color/indigo_grey"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ibCloseFilter"
        app:layout_constraintEnd_toStartOf="@+id/ibCloseFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ibCloseFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:text="@string/name"
        android:textColor="@color/midnight_navy"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFilter" />

    <RadioGroup
        android:id="@+id/rgName"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName">

        <RadioButton
            android:id="@+id/rbAZ"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a_z"
            app:buttonTint="@color/radio_button_tint"
            android:textColor="@color/midnight_navy" />

        <RadioButton
            android:id="@+id/rbZA"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/z_a"
            app:buttonTint="@color/radio_button_tint"
            android:textColor="@color/midnight_navy" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/amount"
        android:textColor="@color/midnight_navy"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgName" />

    <RadioGroup
        android:id="@+id/rgAmount"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAmount">

        <RadioButton
            android:id="@+id/rbLowHigh"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:buttonTint="@color/radio_button_tint"
            android:text="@string/low_to_high"
            android:textColor="@color/midnight_navy" />

        <RadioButton
            android:id="@+id/rbHighLow"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:buttonTint="@color/radio_button_tint"
            android:text="@string/high_to_low"
            android:textColor="@color/midnight_navy" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvTransactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/transaction_date"
        android:textColor="@color/midnight_navy"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgAmount" />

    <EditText
        android:id="@+id/tvStartDate"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@drawable/border_background"
        android:drawableEnd="@drawable/ic_calendar"
        android:hint="@string/start_date"
        android:padding="@dimen/dimen_12dp"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintEnd_toStartOf="@id/tvFinishDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTransactionDate" />

    <EditText
        android:id="@+id/tvFinishDate"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@drawable/border_background"
        android:drawableEnd="@drawable/ic_calendar"
        android:hint="@string/finish_date"
        android:padding="@dimen/dimen_12dp"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvStartDate"
        app:layout_constraintTop_toBottomOf="@id/tvTransactionDate" />

    <TextView
        android:id="@+id/tvAmountRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/amount_range"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStartDate" />

    <TextView
        android:id="@+id/tvCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/bhd"
        android:textSize="@dimen/dimen_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etMinAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAmountRange" />

    <EditText
        android:id="@+id/etMinAmount"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:background="@drawable/border_background"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal"
        android:padding="@dimen/dimen_12dp"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintEnd_toStartOf="@id/tvCurrencyEnd"
        app:layout_constraintStart_toEndOf="@id/tvCurrency"
        app:layout_constraintTop_toBottomOf="@id/tvAmountRange" />

    <TextView
        android:id="@+id/tvCurrencyEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/bhd"
        android:textSize="@dimen/dimen_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etMaxAmount"
        app:layout_constraintEnd_toStartOf="@id/etMaxAmount"
        app:layout_constraintStart_toEndOf="@id/etMinAmount"
        app:layout_constraintTop_toBottomOf="@id/tvAmountRange" />

    <EditText
        android:id="@+id/etMaxAmount"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:background="@drawable/border_background"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal"
        android:padding="@dimen/dimen_12dp"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCurrencyEnd"
        app:layout_constraintTop_toBottomOf="@id/tvAmountRange" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_12dp"
        android:background="@drawable/apply_button_background"
        android:text="@string/apply_filter"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/button_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMinAmount" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_12dp"
        android:background="@drawable/textview_border"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/button_blue"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="@dimen/dimen_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnApply"
        />

</androidx.constraintlayout.widget.ConstraintLayout>