<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color_gradient"
    tools:context=".salary.SalariesActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="Salaries"
        app:titleTextColor="@color/white">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/salaries"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_top_rounded">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/dimen_15dp"
                    android:paddingTop="@dimen/dimen_10dp"
                    android:paddingEnd="@dimen/dimen_15dp"
                    android:paddingBottom="@dimen/dimen_10dp">

                    <EditText
                        android:id="@+id/searchEditText"
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="@dimen/dimen_40dp"
                        android:background="@drawable/bg_curved_border"
                        android:drawableStart="@android:drawable/ic_menu_search"
                        android:drawablePadding="@dimen/dimen_8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/search"
                        android:inputType="text"
                        android:paddingStart="@dimen/dimen_12dp"
                        android:paddingEnd="@dimen/dimen_12dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btnFilter"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:gravity="center_vertical"
                        android:insetTop="@dimen/dimen_0dp"
                        android:insetBottom="@dimen/dimen_0dp"
                        android:paddingHorizontal="@dimen/dimen_12dp"
                        android:paddingVertical="@dimen/dimen_6dp"
                        android:text="@string/sort"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/dimen_14sp"
                        app:icon="@drawable/sorting_general"
                        app:iconGravity="textStart"
                        app:iconPadding="@dimen/dimen_6dp"
                        app:iconTint="@color/dark_blue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>




            <include
                android:id="@+id/layoutSalariesShimmerList"
                layout="@layout/salaries_list_shimmer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />



            <include
                android:id="@+id/layoutSalariesList"
                layout="@layout/salaries_list_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>